erDiagram
    User {
        int id PK
        string name
        string email
        string password
        string phonenumber
        enum role "['admin','passanger']"
    }
    City {
        int id PK
        string name
    }
    Bus_company {
        int id PK
        string name
        string contact_email
        string phone
    }
    Route {
        int id PK
        string name
    }
    Route_stops {
        int id PK
        int route_id FK
        int station_id FK
        int stop_order
    }
    Trip {
        int id PK
        int route_id FK
        int company_id FK
        int driver_id FK
        datetime departure_time
        datetime arrival_time
        decimal base_price
        int total_seats
    }
    Trip_segments {
        int id PK
        int trip_id FK
        int from_stop_id FK
        int to_stop_id FK
        decimal price
        decimal promotion
    }
    Booking {
        int id PK
        int user_id FK
        int trip_id FK
        int departure_city_id FK
        int arrival_city_id FK
        int seats_booked
        decimal total_price
        enum status "['pending', 'paid', 'cancelled']"
        datetime booking_date
    }
    Seats {
        int id PK
        int seat_number
    }
    Trip_seats {
        int id PK
        int trip_id FK
        int seat_id FK
    }
    Booking_seats {
        int id PK
        int booking_id FK
        int trip_seat_id FK
        int start_stop_order
        int end_stop_order
    }
    Payment {
        int id PK
        int booking_id FK
        decimal amount
        enum payment_method "['card','cash','online']"
        string status "['pending','completed','failed']"
        datetime paid_at
    }
    Driver {
        int id PK
        string name
        string phone
    }
    Station {
        int id PK
        int city_id FK
        string name
        string address
    }
    Service {
        int id PK
        string name
        int bus_id FK
    }

    User ||--o{ Booking : makes
    Route ||--o{ Route_stops : contains
    Station ||--o{ Route_stops : appears_in
    Route ||--o{ Trip : schedules
    Bus_company ||--o{ Trip : operates
    Trip ||--o{ Booking : has
    Booking ||--|| Payment : paid_by
    Trip ||--o{ Trip_seats : generates
    Seats ||--o{ Trip_seats : defines
    Booking ||--o{ Booking_seats : includes
    Trip_seats ||--o{ Booking_seats : occupied_during
    City ||--o{ Booking : departure_city
    City ||--o{ Booking : arrival_city
    Driver ||--o{ Trip: contains
    City ||--o{ Station: contains
    Bus_company ||--o{ Service: offers
    Trip ||--o{ Trip_segments : contains
    Route_stops ||--o{ Trip_segments : from_stop
    Route_stops ||--o{ Trip_segments : to_stop